[package]
name = "home_cron"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#async-coap = { git = "https://github.com/google/rust-async-coap.git", rev = "71245d4" }
async-coap = { git = "https://github.com/hubertmis/rust-async-coap.git", branch = "pr/use-trace-instead-of-println" }
serde = { version = "1", features = ["derive"] }
ciborium = "0.2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4"
socket2 = "0.4"
futures = "0.3"
rust_decimal = "1.19"
rust_decimal_macros = "1.19"
rand = "0.8"
log = "0.4"
simple-logging = "2.0"
