[package]
name = "home_cron"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home_mng = { git = "https://github.com/hubertmis/home_mng.git", rev = "22e9973" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
ciborium = "0.2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["gzip", "json"] }
chrono = "0.4.38"
socket2 = "0.4"
futures = "0.3"
rust_decimal = "1.19"
rust_decimal_macros = "1.19"
rand = "0.8"
log = "0.4"
simple-logging = "2.0"
clap = { version = "3.1.18", features = ["derive"] }
