[package]
name = "home_cron"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
ciborium = "0.2"
clap = { version = "3.1.18", features = ["derive"] }
futures = "0.3"
home_mng = { git = "https://github.com/hubertmis/home_mng.git", rev = "77d586b" }
log = "0.4"
openssl = { version = "0.10", features = ["vendored"] } # This is required for cross-compilation
reqwest = { version = "0.11", features = ["gzip", "json"] }
rand = "0.8"
rust_decimal = "1.19"
rust_decimal_macros = "1.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
simple-logging = "2.0"
socket2 = "0.4"
tokio = { version = "1", features = ["full"] }
